--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -15,7 +15,12 @@
   },
   "homeScreen": {
     "title": "Accueil",
-    "welcome": "Bienvenue,"
+    "welcome": "Bienvenue,",
+    "button": {
+      "agenda": "Agenda",
+      "profile": "Profil",
+      "directory": "Annuaire"
+    }
   },
   "agendaScreen": {
     "title": "Agenda"
