--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -15,7 +15,12 @@
   },
   "homeScreen": {
     "title": "Home",
-    "welcome": "Welcome,"
+    "welcome": "Welcome,",
+    "button": {
+      "agenda": "Agenda",
+      "profile": "Profile",
+      "directory": "Directory"
+    }
   },
   "agendaScreen": {
     "title": "Agenda"
